--- a/Nahid_langgraph_class_5.ipynb
+++ b/Nahid_langgraph_class_5.ipynb
@@ -350,6 +350,165 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6c84652d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 📥 Imports: Typing, LangChain Core, LangGraph\n",
+    "\n",
+    "# ✅ Standard typing tools\n",
+    "from typing import Annotated, Sequence, TypedDict, Literal\n",
+    "\n",
+    "# ✅ LangChain Core for message types and prompt handling\n",
+    "from langchain_core.messages import BaseMessage, HumanMessage\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "# ✅ LangGraph utilities for graph state management\n",
+    "from langgraph.graph.message import add_messages\n",
+    "from langgraph.graph import END, StateGraph, START\n",
+    "from langgraph.prebuilt import tools_condition\n",
+    "\n",
+    "# ✅ Pydantic for structured output models (v1 version used by LangChain)\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "\n",
+    "# ✅ LangChain Hub for loading prebuilt components (e.g., prompts, agents)\n",
+    "from langchain import hub\n",
+    "\n",
+    "# ✅ Suppress unnecessary warnings for cleaner output (optional but useful)\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de1948e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 📦 Define the shared agent state structure\n",
+    "class AgentState(TypedDict):\n",
+    "    messages: Annotated[Sequence[BaseMessage], add_messages]\n",
+    "\n",
+    "# %%\n",
+    "# 🧠 LLM Decision Node\n",
+    "def LLM_Decision_Maker(state: AgentState):\n",
+    "    print(\"---- CALL: LLM_DECISION_MAKER ----\")\n",
+    "    messages = state[\"messages\"]  # Extract conversation history from the state\n",
+    "\n",
+    "    # 🧵 Branch 1: Handle user follow-up queries (more than one message in the state)\n",
+    "    if len(messages) > 1:\n",
+    "        last_message = messages[-1]\n",
+    "        question = last_message.content  # Assume the latest message is a user question\n",
+    "\n",
+    "        # Define a simple prompt template to guide the LLM\n",
+    "        prompt = PromptTemplate(\n",
+    "            template=\"\"\"You are a helpful assistant. Answer the following question:\n",
+    "            Here is the question: {question}\"\"\",\n",
+    "            input_variables=[\"question\"]\n",
+    "        )\n",
+    "\n",
+    "        # Chain prompt with LLM to generate the response\n",
+    "        chain = prompt | llm\n",
+    "        response = chain.invoke({\"question\": question})\n",
+    "        return {\"messages\": [response]}    # Return updated state with the LLM's response\n",
+    "\n",
+    "    else:\n",
+    "        \n",
+    "        llm_with_tool = llm.bind_tools(tools)  # 🧵 Branch 2: Initial user input or single-message case; bind tools for tool-augmented reasoning\n",
+    "        response = llm_with_tool.invoke(messages)   # Use LLM with tools to generate a response\n",
+    "\n",
+    "        # Return updated state\n",
+    "        return {\"messages\": [response]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb0887f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%\n",
+    "# 🧪 Define a structure output model for grading\n",
+    "class Grade(BaseModel):\n",
+    "    binary_score: str = Field(description=\"Relevance score: 'yes' or 'no'\")\n",
+    "\n",
+    "# %%\n",
+    "# 📊 Grading Node: Check if retrieved docs are relevant\n",
+    "def grade_documents(state: AgentState) -> Literal[\"Output Generator\", \"Query Rewriter\"]:\n",
+    "    # Logging for debugging\n",
+    "    print(\"----CALLING GRADE FOR CHECKING RELEVANCY----\")\n",
+    "    llm_with_structure_op = llm.with_structured_output(Grade)  # Wrap the LLM with a structured output schema for grading (e.g., with a binary yes/no score)\n",
+    "\n",
+    "    # Define the grading prompt template for the LLM\n",
+    "    prompt = PromptTemplate(\n",
+    "        template=\"\"\"You are a grader deciding if a document is relevant to a user’s question.\n",
+    "                    Here is the document: {context}\n",
+    "                    Here is the user’s question: {question}\n",
+    "                    If the document talks about or contains information related to the user’s question, mark it as relevant. \n",
+    "                    Give a 'yes' or 'no' answer to show if the document is relevant to the question.\"\"\",\n",
+    "        input_variables=[\"context\", \"question\"]\n",
+    "    )\n",
+    "    chain = prompt | llm_with_structure_op  # Combine prompt and LLM into a processing chain\n",
+    "    message = state['messages'] # Retrieve the conversation history (messages) from agent state\n",
+    "    last_message = message[-1]   # Get the most recent message (assumed to contain the document text)\n",
+    "    question = message[0].content   # Get the original user query (assumed to be the first message)\n",
+    "    docs = last_message.content         # Extract the document text from the last message\n",
+    "    scored_result = chain.invoke({\"question\": question, \"context\": docs})  # Use the chain to evaluate the document's relevancy to the question\n",
+    "    score = scored_result.binary_score   # Extract the binary relevancy score from the model output\n",
+    "\n",
+    "    # Based on the score, decide the next action: generate output or rewrite the query\n",
+    "    if score == \"yes\":\n",
+    "        print(\"----DECISION: DOCS ARE RELEVANT----\")\n",
+    "        return \"generator\"\n",
+    "    else:\n",
+    "        print(\"----DECISION: DOCS ARE NOT RELEVANT----\")\n",
+    "        return \"rewriter\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0aa961f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%\n",
+    "# 🧾 RAG Output Generator Node\n",
+    "def generate(state: AgentState):\n",
+    "    print(\"---- CALL: GENERATE ANSWER ----\")\n",
+    "    messages = state[\"messages\"]          # 🔄 Extract conversation history from agent state\n",
+    "    question = messages[0].content        # Assumes the first message contains the user question\n",
+    "    context = messages[-1].content        # Assumes the last message contains the retrieved documents/context\n",
+    "\n",
+    "    \n",
+    "    prompt = hub.pull(\"rlm/rag-prompt\")  # 📥 Load a prebuilt RAG prompt from LangChain Hub\n",
+    "    rag_chain = prompt | llm  # 🔗 Compose the RAG pipeline: prompt → LLM\n",
+    "    response = rag_chain.invoke({\"context\": context, \"question\": question})   # 🚀 Generate the response using question and retrieved context\n",
+    "    print(f\"Generated response: {response}\")   # 🖨️ Log the generated response for debugging\n",
+    "    return {\"messages\": [response]}  # 🔁 Return the new state with the LLM response\n",
+    "\n",
+    "\n",
+    "# %%\n",
+    "# 🔁 Query Rewriter Node\n",
+    "def rewrite(state: AgentState):\n",
+    "    print(\"---- CALL: QUERY REWRITER ----\")\n",
+    "    question = state[\"messages\"][0].content   # 🧠 Extract the original user question from the conversation state\n",
+    "\n",
+    "    # 💬 Construct a message to guide the LLM in reformulating the query\n",
+    "    input_message = [\n",
+    "        HumanMessage(content=f\"\"\"Look at the input and try to reason about the underlying semantic intent or meaning. \n",
+    "                     Here is the initial question: {question}\n",
+    "                     Formulate an improved question:\"\"\")\n",
+    "    ]\n",
+    "    response = llm.invoke(input_message)  # 🤖 Invoke the LLM to rewrite the question\n",
+    "    return {\"messages\": [response]}   # 🔁 Return the rewritten question as the new message state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "78052615",
    "metadata": {},
    "outputs": [
@@ -368,111 +527,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "# 📥 Imports: Typing, LangChain Core, LangGraph\n",
-    "from typing import Annotated, Sequence, TypedDict, Literal\n",
-    "from langchain_core.messages import BaseMessage, HumanMessage\n",
-    "from langgraph.graph.message import add_messages\n",
-    "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
-    "from langgraph.graph import END, StateGraph, START\n",
-    "from langgraph.prebuilt import tools_condition\n",
-    "from langchain import hub\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "# %%\n",
-    "# 📦 Define the shared agent state structure\n",
-    "class AgentState(TypedDict):\n",
-    "    messages: Annotated[Sequence[BaseMessage], add_messages]\n",
-    "\n",
-    "# %%\n",
-    "# 🧠 LLM Decision Node\n",
-    "def LLM_Decision_Maker(state: AgentState):\n",
-    "    print(\"---- CALL: LLM_DECISION_MAKER ----\")\n",
-    "    messages = state[\"messages\"]\n",
-    "\n",
-    "    if len(messages) > 1:\n",
-    "        last_message = messages[-1]\n",
-    "        question = last_message.content\n",
-    "\n",
-    "        prompt = PromptTemplate(\n",
-    "            template=\"\"\"You are a helpful assistant. Answer the following question:\n",
-    "Here is the question: {question}\"\"\",\n",
-    "            input_variables=[\"question\"]\n",
-    "        )\n",
-    "        chain = prompt | llm\n",
-    "        response = chain.invoke({\"question\": question})\n",
-    "        return {\"messages\": [response]}\n",
-    "    \n",
-    "    else:\n",
-    "        llm_with_tool = llm.bind_tools(tools)\n",
-    "        response = llm_with_tool.invoke(messages)\n",
-    "        return {\"messages\": [response]}\n",
-    "\n",
-    "# %%\n",
-    "# 🧪 Define a structure output model for grading\n",
-    "class Grade(BaseModel):\n",
-    "    binary_score: str = Field(description=\"Relevance score: 'yes' or 'no'\")\n",
-    "\n",
-    "# %%\n",
-    "# 📊 Grading Node: Check if retrieved docs are relevant\n",
-    "def grade_documents(state: AgentState) -> Literal[\"generator\", \"rewriter\"]:\n",
-    "    print(\"---- CALL: GRADE DOCUMENTS ----\")\n",
-    "    llm_with_structure = llm.with_structured_output(Grade)\n",
-    "\n",
-    "    prompt = PromptTemplate(\n",
-    "        template=\"\"\"You are a grader deciding if a document is relevant to a user’s question.\n",
-    "                 Here is the document: {context}\n",
-    "                 Here is the user’s question: {question}\n",
-    "                 If the document talks about or contains information related to the user’s question, mark it as relevant.\n",
-    "                 Give a 'yes' or 'no' answer.\"\"\",\n",
-    "        input_variables=[\"context\", \"question\"]\n",
-    "    )\n",
-    "    \n",
-    "    chain = prompt | llm_with_structure\n",
-    "    messages = state[\"messages\"]\n",
-    "    question = messages[0].content\n",
-    "    context = messages[-1].content\n",
-    "    result = chain.invoke({\"question\": question, \"context\": context})\n",
-    "    \n",
-    "    if result.binary_score == \"yes\":\n",
-    "        print(\"---- DECISION: Relevant ----\")\n",
-    "        return \"generator\"\n",
-    "    else:\n",
-    "        print(\"---- DECISION: Not Relevant ----\")\n",
-    "        return \"rewriter\"\n",
-    "\n",
-    "# %%\n",
-    "# 🧾 RAG Output Generator Node\n",
-    "def generate(state: AgentState):\n",
-    "    print(\"---- CALL: GENERATE ANSWER ----\")\n",
-    "    messages = state[\"messages\"]\n",
-    "    question = messages[0].content\n",
-    "    context = messages[-1].content\n",
-    "\n",
-    "    prompt = hub.pull(\"rlm/rag-prompt\")\n",
-    "    rag_chain = prompt | llm\n",
-    "\n",
-    "    response = rag_chain.invoke({\"context\": context, \"question\": question})\n",
-    "    print(f\"Generated response: {response}\")\n",
-    "    return {\"messages\": [response]}\n",
-    "\n",
-    "# %%\n",
-    "# 🔁 Query Rewriter Node\n",
-    "def rewrite(state: AgentState):\n",
-    "    print(\"---- CALL: QUERY REWRITER ----\")\n",
-    "    question = state[\"messages\"][0].content\n",
-    "\n",
-    "    input_message = [\n",
-    "        HumanMessage(content=f\"\"\"Look at the input and try to reason about the underlying semantic intent or meaning. \n",
-    "                     Here is the initial question: {question}\n",
-    "                     Formulate an improved question:\"\"\")\n",
-    "    ]\n",
-    "\n",
-    "    response = llm.invoke(input_message)\n",
-    "    return {\"messages\": [response]}\n",
-    "\n",
     "# %%\n",
     "# 🧩 Build the LangGraph Workflow\n",
     "workflow = StateGraph(AgentState)\n",
@@ -506,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "fd589118",
    "metadata": {},
    "outputs": [
